ending contact html

--- a/main/site_map.html
+++ b/main/site_map.html
@@ -575,7 +575,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script src="./assets/js/time.js"></script>
-    <script src="./assets/js/site_map.js"></script>
+    <script src="./assets/js/first.js"></script>
     <script>
         AOS.init();
     </script>
