--- a/main/detail_region.html
+++ b/main/detail_region.html
@@ -480,7 +480,7 @@
     </p>
     <script src="./assets/lib/js/smooth-scroll.js"></script>
     <script src="./assets/lib/js/sticky.js"></script>
-    <script src="./assets/js/site_map.js"></script>
+    <script src="./assets/js/first.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./assets/js/time.js"></script>
 
