--- a/main/detailers.html
+++ b/main/detailers.html
@@ -222,7 +222,7 @@
     </header>
 
     <main>
-        <div class="cat-hero">
+        <div class="detail_reg-hero">
             <div class="section-wrapp">
                 <div class="container">
                     <div class="wrapper_sidebar_section main" id="main-content">
@@ -256,87 +256,68 @@
                             </ul>
                         </div>
 
-                        <ul class="cat_list content" id="content">
+                        <ul class="detail_reg content" id="content">
                             <li data-aos="fade-up">
                                 <div class="links">
                                     <span class="link">
                                         <a href="#">Bosh sahifa</a>
                                     </span>
+                                    <span class="link">
+                                        <a href="#"><i class="fa-regular fa-chevrons-right"></i> Sayyohlik</a>
+                                    </span>
+                                    <span class="link">
+                                        <a href="#">
+                                            <i class="fa-regular fa-chevrons-right"></i> Dam olish maskanlari
+                                        </a>
+                                    </span>
                                     <span class="link currently">
-                                        <i class="fa-regular fa-chevrons-right"></i> Shahar va tumanlar
+                                        <i class="fa-regular fa-chevrons-right"></i> "TIBET MOUNTS FLORA"
+                                        sanatoriy-korort kompleksi
                                     </span>
                                 </div>
-                            </li>
-                            <h1 class="detail-heading">RAHBARIYAT</h1>
 
-                            <li class="headers_item" data-aos="fade-up">
-                                <img src="./assets/img/regions.jpg" alt="">
+                                <h1 class="detail-heading detail_post-heading">TASHKILIY TUZILMA SXEMASI</h1>
 
-                                <div class="headers_info_wrapper">
-                                    <a href="#" class="headers_detail_link">
-                                        Angren shahar
-                                    </a>
-                                    <h1 class="headers-mayor_fullname">
-                                        XUDOYBERDIEV FURQAT ABDUSALOMOVICH
-                                    </h1>
-                                    <p class="headers-info">
-                                        <b>MANZIL:</b>
-                                        111000, Zafar shaharchasi, Mustaqillik ko'chasi 1 uy
-                                    </p>
-                                    <p class="headers-info">
-                                        <b>TELEFON:</b>
-                                        0 370-93-51-350
-                                    </p>
-                                    <p class="headers-info">
-                                        <b>FAKS:</b>
-                                        <a href="tel:+ 998 78 150 93-70">
-                                            + 998 78 150 93-70
-                                        </a>
-                                    </p>
-                                    <p class="headers-info">
-                                        <b>E-MAIL:</b>
-                                        <a href="#">bekobod.t@umail.uz</a>
-                                    </p>
-                                    <p class="headers-info">
-                                        <b>VEB-SAYT: </b>
-                                        <a href="www.bekobod-tum.uz">
-                                            www.bekobod-tum.uz
-                                        </a>
-                                    </p>
-                                    <p class="headers-info">
-                                        <b>E-XAT: </b>
-                                        <a href="#">
-                                            bekobod.t@exat.uz
-                                        </a>
-                                    </p>
-                                    <p class="headers-info">
-                                        <b>QABUL KUNLARI: </b>
-                                        Juma 09:00 dan 14:00 gacha
-                                    </p>
-                                    <p class="headers-info">
-                                        <a href="#" class="headers-contact_link">
-                                            Murojaat yuborish
-                                        </a>
-                                    </p>
+                                <div class="detail_post-img_wrapper">
+                                    <img src="./assets/img/post.jpg" data-aos="fade-up" alt="">
+                                    <img src="./assets/img/post.jpg" data-aos="fade-up" alt="">
+                                    <img src="./assets/img/post.jpg" data-aos="fade-up" alt="">
                                 </div>
-                            </li>
 
-                            <li class="cat_pagination_list">
-                                <a href="#" class="cat_pagination_prev">
-                                    <i class="fa-regular fa-chevron-left"></i>
-                                </a>
+                                <ul class="detail-more_info">
+                                    <li class="detail-more_info_item date">
+                                        <span>17.03.2021</span>
+                                    </li>
+                                    <li class="detail-more_info_item share">
+                                        <span class="detail-share_text">Bo`lishish:</span>
 
-                                <a href="#" class="cat_pagination_page_link">1</a>
-                                <a href="#" class="cat_pagination_page_link active">2</a>
-                                <a href="#" class="cat_pagination_page_link">3</a>
-                                <a href="#" class="cat_pagination_page_link">4</a>
-                                <a href="#" class="cat_pagination_page_link">5</a>
-                                <a href="#" class="cat_pagination_page_link">6</a>
-                                <a href="#" class="cat_pagination_page_link">3</a>
+                                        <a href="http://www.facebook.com/sharer.php?u="
+                                            class="detail-share_icon facebook">
+                                            <i class="fa-brands fa-facebook-f"></i>
+                                        </a>
 
-                                <a href="#" class="cat_pagination_next">
-                                    <i class="fa-regular fa-chevron-right"></i>
-                                </a>
+                                        <a href="https://twitter.com/share?url=" class="detail-share_icon twitter">
+                                            <i class="fa-brands fa-twitter"></i>
+                                        </a>
+
+                                        <a href="https://t.me/share/url?url=" class="detail-share_icon telegram">
+                                            <i class="fa-solid fa-paper-plane"></i>
+                                        </a>
+                                    </li>
+                                    <li class="detail-more_info_item download">
+                                        <a href="#">
+                                            Yuklash
+                                            <span class="detail-share_icon ">
+                                                <i class="fa-solid fa-download"></i>
+                                            </span>
+                                        </a>
+                                    </li>
+
+                                    <li class="detail-more_info_item view">
+                                        <i class="fa-solid fa-eye"></i>
+                                        20,000
+                                    </li>
+                                </ul>
                             </li>
                         </ul>
                     </div>
@@ -433,10 +414,10 @@
         TOSHKENT VILOYATI HOKIMLIGI © 2009-2023
     </p>
     <script src="./assets/lib/js/smooth-scroll.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./assets/lib/js/sticky.js"></script>
-    <script src="./assets/js/time.js"></script>
     <script src="./assets/js/first.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./assets/js/time.js"></script>
 
     <script type="text/javascript">
         var a = new StickySidebar('#sidebar', {
@@ -446,6 +427,7 @@
             innerWrapperSelector: '.sidebar__inner'
         });
     </script>
+
     <script>
         AOS.init();
     </script>
