adding body to detailers

--- a/main/detailers.html
+++ b/main/detailers.html
@@ -278,6 +278,12 @@
 
                                 <h1 class="detail-heading detail_post-heading">TASHKILIY TUZILMA SXEMASI</h1>
 
+                                <!-- Content body here -->
+                                <!-- !!! Warning clear me after writing back end !!! -->
+                                <div class="detailer_body">
+
+                                </div>
+
                                 <div class="detail_post-img_wrapper">
                                     <img src="./assets/img/post.jpg" data-aos="fade-up" alt="">
                                     <img src="./assets/img/post.jpg" data-aos="fade-up" alt="">
