--- a/main/detail_region.html
+++ b/main/detail_region.html
@@ -53,19 +53,19 @@
 
                     <div class="header_settings">
                         <form action="">
-                            <select name="language" id="language" data-aos="fade-up">
+                            <select name="language" id="language">
                                 <option value="uz" selected>Uz</option>
                                 <option value="уз">Уз</option>
                                 <option value="ru">Ru</option>
                                 <option value="en">Eng</option>
                             </select>
 
-                            <div class="header_search_wrapper" data-aos="fade-up">
+                            <div class="header_search_wrapper">
                                 <input type="text" name="search" placeholder="Qidirish">
                                 <button type="submit"><i class="fa-regular fa-magnifying-glass"></i></button>
                             </div>
 
-                            <div class="header_burger" data-aos="fade-up">
+                            <div class="header_burger">
                                 <div class="line"></div>
                                 <div class="line"></div>
                                 <div class="line"></div>
@@ -76,7 +76,7 @@
 
                 <ul class="header_navigation_list">
                     <li class="header_navigation_item">
-                        <span data-aos="fade-up" class="header_navigation_name">
+                        <span class="header_navigation_name">
                             ТУМАН ҲОКИМЛИГИ
                         </span>
 
@@ -102,7 +102,7 @@
                         </div>
                     </li>
                     <li class="header_navigation_item">
-                        <span data-aos="fade-up" class="header_navigation_name">
+                        <span class="header_navigation_name">
                             ТУМАН ҲАҚИДА
                         </span>
 
@@ -113,7 +113,7 @@
                         </div>
                     </li>
                     <li class="header_navigation_item">
-                        <span data-aos="fade-up" class="header_navigation_name">
+                        <span class="header_navigation_name">
                             ШАҲАР ВА ТУМАНЛАР
                         </span>
 
@@ -139,7 +139,7 @@
                         </div>
                     </li>
                     <li class="header_navigation_item">
-                        <span data-aos="fade-up" class="header_navigation_name">
+                        <span class="header_navigation_name">
                             ҲОКИМЛИК ФАОЛИЯТИ
                         </span>
 
@@ -165,7 +165,7 @@
                         </div>
                     </li>
                     <li class="header_navigation_item">
-                        <span data-aos="fade-up" class="header_navigation_name">
+                        <span class="header_navigation_name">
                             Маҳаллий Кенгаш
                         </span>
 
@@ -191,7 +191,7 @@
                         </div>
                     </li>
                     <li class="header_navigation_item">
-                        <span data-aos="fade-up" class="header_navigation_name">
+                        <span class="header_navigation_name">
                             САЙЁҲЛИК
                         </span>
 
@@ -257,7 +257,7 @@
                         </div>
 
                         <ul class="detail_reg content" id="content">
-                            <li data-aos="fade-up">
+                            <li>
                                 <div class="links">
                                     <span class="link">
                                         <a href="#">Bosh sahifa</a>
@@ -395,7 +395,7 @@
                 <div class="container">
                     <h1 class="wrapper_title">O` ZBEKISTON YANGILIKLARI</h1>
                     <ul class="news_list">
-                        <li class="news_item" data-aos="fade-up">
+                        <li class="news_item">
                             <img src="./assets/img/wikwgzhroifu-849v5ep4fleb5is2pmedium.jpg" alt="">
                             <p class="news_date"><i class="fa-regular fa-clock"></i> 26-07-2022</p>
                             <h1 class="news_link">
@@ -406,7 +406,7 @@
                                 </a>
                             </h1>
                         </li>
-                        <li class="news_item" data-aos="fade-up">
+                        <li class="news_item">
                             <img src="./assets/img/wikwgzhroifu-849v5ep4fleb5is2pmedium.jpg" alt="">
                             <p class="news_date"><i class="fa-regular fa-clock"></i> 26-07-2022</p>
                             <h1 class="news_link">
@@ -417,7 +417,7 @@
                                 </a>
                             </h1>
                         </li>
-                        <li class="news_item" data-aos="fade-up">
+                        <li class="news_item">
                             <img src="./assets/img/wikwgzhroifu-849v5ep4fleb5is2pmedium.jpg" alt="">
                             <p class="news_date"><i class="fa-regular fa-clock"></i> 26-07-2022</p>
                             <h1 class="news_link">
@@ -428,7 +428,7 @@
                                 </a>
                             </h1>
                         </li>
-                        <li class="news_item" data-aos="fade-up">
+                        <li class="news_item">
                             <img src="./assets/img/wikwgzhroifu-849v5ep4fleb5is2pmedium.jpg" alt="">
                             <p class="news_date"><i class="fa-regular fa-clock"></i> 26-07-2022</p>
                             <h1 class="news_link">
