--- a/main/wrapper.html
+++ b/main/wrapper.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.0/css/all.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
     <title>BO`STONLIQ TUMANI HOKIMLIGI</title>
 </head>
@@ -187,7 +187,6 @@
                             </a> <a href="#">
                                 action
                             </a>
-
                         </div>
                     </li>
                     <li class="header_navigation_item">
@@ -216,187 +215,13 @@
                         </div>
                     </li>
                 </ul>
-                <div class="closer"></div>
+                <!-- <div class="closer"></div> -->
             </div>
         </div>
     </header>
 
     <main>
-        <div class="cat-hero">
-            <div class="section-wrapp">
-                <div class="container">
-                    <div class="wrapper_sidebar_section main" id="main-content">
-                        <div class="nav_sidebar sidebar" id="sidebar">
-                            <ul class="nav_link_list">
-                                <li class="nav_link_item active">
-                                    <a href="#">
-                                        Shahar va tumanlar
-                                    </a>
-                                </li>
-                                <li class="nav_link_item">
-                                    <a href="#">
-                                        Angren shahar
-                                    </a>
-                                </li>
-                                <li class="nav_link_item">
-                                    <a href="#">
-                                        Angren shahar
-                                    </a>
-                                </li>
-                                <li class="nav_link_item">
-                                    <a href="#">
-                                        Angren shahar
-                                    </a>
-                                </li>
-                                <li class="nav_link_item">
-                                    <a href="#">
-                                        Angren shahar
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-
-                        <ul class="cat_list content" id="content">
-                            <li>
-                                <div class="links">
-                                    <span class="link">
-                                        <a href="#">Bosh sahifa</a>
-                                    </span>
-                                    <span class="link currently">
-                                        <i class="fa-regular fa-chevrons-right"></i> Shahar va tumanlar
-                                    </span>
-                                </div>
-                            </li>
-                            <h1 class="detail-heading">RAHBARIYAT</h1>
-
-                            <li class="headers_item">
-                                <img src="./assets/img/regions.jpg" alt="">
-
-                                <div class="headers_info_wrapper">
-                                    <a href="#" class="headers_detail_link">
-                                        Angren shahar
-                                    </a>
-                                    <h1 class="headers-mayor_fullname">
-                                        XUDOYBERDIEV FURQAT ABDUSALOMOVICH
-                                    </h1>
-                                    <p class="headers-info">
-                                        <b>MANZIL:</b>
-                                        111000, Zafar shaharchasi, Mustaqillik ko'chasi 1 uy
-                                    </p>
-                                    <p class="headers-info">
-                                        <b>TELEFON:</b>
-                                        0 370-93-51-350
-                                    </p>
-                                    <p class="headers-info">
-                                        <b>FAKS:</b>
-                                        <a href="tel:+ 998 78 150 93-70">
-                                            + 998 78 150 93-70
-                                        </a>
-                                    </p>
-                                    <p class="headers-info">
-                                        <b>E-MAIL:</b>
-                                        <a href="#">bekobod.t@umail.uz</a>
-                                    </p>
-                                    <p class="headers-info">
-                                        <b>VEB-SAYT: </b>
-                                        <a href="www.bekobod-tum.uz">
-                                            www.bekobod-tum.uz
-                                        </a>
-                                    </p>
-                                    <p class="headers-info">
-                                        <b>E-XAT: </b>
-                                        <a href="#">
-                                            bekobod.t@exat.uz
-                                        </a>
-                                    </p>
-                                    <p class="headers-info">
-                                        <b>QABUL KUNLARI: </b>
-                                        Juma 09:00 dan 14:00 gacha
-                                    </p>
-                                    <p class="headers-info">
-                                        <a href="#" class="headers-contact_link">
-                                            Murojaat yuborish
-                                        </a>
-                                    </p>
-                                </div>
-                            </li>
-
-                            <li class="cat_pagination_list">
-                                <a href="#" class="cat_pagination_prev">
-                                    <i class="fa-regular fa-chevron-left"></i>
-                                </a>
-
-                                <a href="#" class="cat_pagination_page_link">1</a>
-                                <a href="#" class="cat_pagination_page_link active">2</a>
-                                <a href="#" class="cat_pagination_page_link">3</a>
-                                <a href="#" class="cat_pagination_page_link">4</a>
-                                <a href="#" class="cat_pagination_page_link">5</a>
-                                <a href="#" class="cat_pagination_page_link">6</a>
-                                <a href="#" class="cat_pagination_page_link">3</a>
-
-                                <a href="#" class="cat_pagination_next">
-                                    <i class="fa-regular fa-chevron-right"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="news">
-            <div class="section-wrapp">
-                <div class="container">
-                    <h1 class="wrapper_title">O` ZBEKISTON YANGILIKLARI</h1>
-                    <ul class="news_list">
-                        <li class="news_item">
-                            <img src="./assets/img/wikwgzhroifu-849v5ep4fleb5is2pmedium.jpg" alt="">
-                            <p class="news_date"><i class="fa-regular fa-clock"></i> 26-07-2022</p>
-                            <h1 class="news_link">
-                                <a href="#">
-                                    Fuqarolar tashabbusi jamg‘armasidan jamoatchilik fikri asosida shakllantirilgan
-                                    (g‘olib deb topilgan) tadbirlarni
-                                    moliyalashtirish uchun yo‘naltirilgan mablag‘lar yuzasidan
-                                </a>
-                            </h1>
-                        </li>
-                        <li class="news_item">
-                            <img src="./assets/img/wikwgzhroifu-849v5ep4fleb5is2pmedium.jpg" alt="">
-                            <p class="news_date"><i class="fa-regular fa-clock"></i> 26-07-2022</p>
-                            <h1 class="news_link">
-                                <a href="#">
-                                    Fuqarolar tashabbusi jamg‘armasidan jamoatchilik fikri asosida shakllantirilgan
-                                    (g‘olib deb topilgan) tadbirlarni
-                                    moliyalashtirish uchun yo‘naltirilgan mablag‘lar yuzasidan
-                                </a>
-                            </h1>
-                        </li>
-                        <li class="news_item">
-                            <img src="./assets/img/wikwgzhroifu-849v5ep4fleb5is2pmedium.jpg" alt="">
-                            <p class="news_date"><i class="fa-regular fa-clock"></i> 26-07-2022</p>
-                            <h1 class="news_link">
-                                <a href="#">
-                                    Fuqarolar tashabbusi jamg‘armasidan jamoatchilik fikri asosida shakllantirilgan
-                                    (g‘olib deb topilgan) tadbirlarni
-                                    moliyalashtirish uchun yo‘naltirilgan mablag‘lar yuzasidan
-                                </a>
-                            </h1>
-                        </li>
-                        <li class="news_item">
-                            <img src="./assets/img/wikwgzhroifu-849v5ep4fleb5is2pmedium.jpg" alt="">
-                            <p class="news_date"><i class="fa-regular fa-clock"></i> 26-07-2022</p>
-                            <h1 class="news_link">
-                                <a href="#">
-                                    Fuqarolar tashabbusi jamg‘armasidan jamoatchilik fikri asosida shakllantirilgan
-                                    (g‘olib deb topilgan) tadbirlarni
-                                    moliyalashtirish uchun yo‘naltirilgan mablag‘lar yuzasidan
-                                </a>
-                            </h1>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+        
     </main>
 
     <footer>
@@ -408,7 +233,7 @@
                             Materiallardan foydalanishda <br> Toshkent viloyati hokimligi <br> veb-saytiga havola
                             qoying!
                         </p>
-                        <a href="#" class="footer_map_link">
+                        <a href="./site_map.html" class="footer_map_link">
                             SAYT XARITASI
                         </a>
                     </li>
@@ -428,27 +253,17 @@
                 </ul>
             </div>
         </div>
+
     </footer>
     <p class="footer_title footer_text">
         TOSHKENT VILOYATI HOKIMLIGI © 2009-2023
     </p>
     <script src="./assets/lib/js/smooth-scroll.js"></script>
+    <script src="./assets/lib/js/swiper_settings.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="./assets/lib/js/sticky.js"></script>
-    <script src="./assets/js/time.js"></script>
-    <script src="./assets/js/first.js"></script>
 
-    <script type="text/javascript">
-        var a = new StickySidebar('#sidebar', {
-            topSpacing: 50,
-            bottomSpacing: -20,
-            containerSelector: '.container',
-            innerWrapperSelector: '.sidebar__inner'
-        });
-    </script>
-    <script>
-        AOS.init();
-    </script>
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/time.js"></script>
 </body>
 
 </html>
