deleting aos sscripts and links then adding search result

--- a/main/index.html
+++ b/main/index.html
@@ -47,7 +47,7 @@
                     <div class="header_logo">
                         <a href="./index.html">
                             <img src="./assets/img/logo.png" alt="">
-                            ANDIJON TUMANI HOKIMLIGI
+                            ANDIJON SHAXAR HOKIMLIGI
                         </a>
                     </div>
 
@@ -55,9 +55,7 @@
                         <form action="">
                             <select name="language" id="language">
                                 <option value="uz" selected>Uz</option>
-                                <option value="уз">Уз</option>
                                 <option value="ru">Ru</option>
-                                <option value="en">Eng</option>
                             </select>
 
                             <div class="header_search_wrapper">
