--- a/main/contact.html
+++ b/main/contact.html
@@ -372,7 +372,7 @@
     <script src="./assets/lib/js/smooth-scroll.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./assets/js/time.js"></script>
-    <script src="./assets/js/first.js"></script>
+    <script src="./assets/js/main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.7/jquery.inputmask.min.js"></script>
 
