--- a/main/detail_post.html
+++ b/main/detail_post.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.0/css/all.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
     <title>BO`STONLIQ TUMANI HOKIMLIGI</title>
 </head>
@@ -473,8 +472,7 @@
     </p>
     <script src="./assets/lib/js/smooth-scroll.js"></script>
     <script src="./assets/lib/js/sticky.js"></script>
-    <script src="./assets/js/first.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./assets/js/main.js"></script>
     <script src="./assets/js/time.js"></script>
 
     <script type="text/javascript">
@@ -484,10 +482,6 @@
             containerSelector: '.container',
             innerWrapperSelector: '.sidebar__inner'
         });
-    </script>
-
-    <script>
-        AOS.init();
     </script>
 </body>
 
