fixing bugs in navbar and adding image for language

--- a/main/index.html
+++ b/main/index.html
@@ -53,10 +53,13 @@
 
                     <div class="header_settings">
                         <form action="">
-                            <select name="language" id="language">
-                                <option value="uz" selected>Uz</option>
-                                <option value="ru">Ru</option>
-                            </select>
+                            <div class="header_form_selection">
+                                <img class="header_lang_img" src="https://bostonliq.toshvil.uz/images/uz.png" alt="">
+                                <select name="language" id="language">
+                                    <option value="uz" selected>Uz</option>
+                                    <option value="ru">Ru</option>
+                                </select>
+                            </div>
 
                             <div class="header_search_wrapper">
                                 <input type="text" name="search" placeholder="Qidirish">
@@ -686,8 +689,6 @@
                             </div>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </div>
