--- a/main/site_map.html
+++ b/main/site_map.html
@@ -573,7 +573,7 @@
     <script src="./assets/lib/js/smooth-scroll.js"></script>
 
     <script src="./assets/js/time.js"></script>
-    <script src="./assets/js/first.js"></script>
+    <script src="./assets/js/main.js"></script>
 
 </body>
 
