--- a/main/search_result.html
+++ b/main/search_result.html
@@ -218,8 +218,192 @@
     </header>
 
     <main>
-        <div class="search_res">
-            
+        <div class="cat-hero">
+            <div class="section-wrapp">
+                <div class="container">
+                    <div class="wrapper_sidebar_section main" id="main-content">
+                        <div class="nav_sidebar sidebar" id="sidebar">
+                            <ul class="nav_link_list">
+                                <li class="nav_link_item active">
+                                    <a href="#">
+                                        Shahar va tumanlar
+                                    </a>
+                                </li>
+                                <li class="nav_link_item">
+                                    <a href="#">
+                                        Angren shahar
+                                    </a>
+                                </li>
+                                <li class="nav_link_item">
+                                    <a href="#">
+                                        Angren shahar
+                                    </a>
+                                </li>
+                                <li class="nav_link_item">
+                                    <a href="#">
+                                        Angren shahar
+                                    </a>
+                                </li>
+                                <li class="nav_link_item">
+                                    <a href="#">
+                                        Angren shahar
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <ul class="cat_list search content" id="content">
+                            <li>
+                                <div class="links">
+                                    <span class="link">
+                                        <a href="#">Bosh sahifa</a>
+                                    </span>
+                                    <span class="link">
+                                        <a href="#"><i class="fa-regular fa-chevrons-right"></i> So`rov</a>
+                                    </span>
+                                    <span class="link currently">
+                                        <i class="fa-regular fa-chevrons-right"></i> Angren
+                                    </span>
+                                </div>
+                            </li>
+                            <h1 class="detail-heading">SO'ROV BO'YICHA QIDIRUV NATIJALARI: Angren</h1>
+
+                            <li class="cat_item search">
+                                <div class="cat_info_wrapper">
+                                    <time>
+                                        12-03-2023
+                                    </time>
+                                    <a href="#" class="cat_detail_link">
+                                        Angren shahar
+                                    </a>
+                                    <p class="cat_body">
+                                        Boʻstonliq tumanida “Tashabbusli byudjet” loyihasi doirasida amalga
+                                        oshirilayotgan
+                                        ishlar toʻgʻrisida maʼlumot
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="cat_item search">
+                                <div class="cat_info_wrapper">
+                                    <time>
+                                        12-03-2023
+                                    </time>
+                                    <a href="#" class="cat_detail_link">
+                                        Angren shahar
+                                    </a>
+                                    <p class="cat_body">
+                                        Boʻstonliq tumanida “Tashabbusli byudjet” loyihasi doirasida amalga
+                                        oshirilayotgan
+                                        ishlar toʻgʻrisida maʼlumot
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="cat_item search">
+                                <div class="cat_info_wrapper">
+                                    <time>
+                                        12-03-2023
+                                    </time>
+                                    <a href="#" class="cat_detail_link">
+                                        Angren shahar
+                                    </a>
+                                    <p class="cat_body">
+                                        Boʻstonliq tumanida “Tashabbusli byudjet” loyihasi doirasida amalga
+                                        oshirilayotgan
+                                        ishlar toʻgʻrisida maʼlumot
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="cat_item search">
+                                <div class="cat_info_wrapper">
+                                    <time>
+                                        12-03-2023
+                                    </time>
+                                    <a href="#" class="cat_detail_link">
+                                        Angren shahar
+                                    </a>
+                                    <p class="cat_body">
+                                        Boʻstonliq tumanida “Tashabbusli byudjet” loyihasi doirasida amalga
+                                        oshirilayotgan
+                                        ishlar toʻgʻrisida maʼlumot
+                                    </p>
+                                </div>
+                            </li>
+
+                            <li class="cat_pagination_list">
+                                <a href="#" class="cat_pagination_prev">
+                                    <i class="fa-regular fa-chevron-left"></i>
+                                </a>
+
+                                <a href="#" class="cat_pagination_page_link">1</a>
+                                <a href="#" class="cat_pagination_page_link active">2</a>
+                                <a href="#" class="cat_pagination_page_link">3</a>
+                                <a href="#" class="cat_pagination_page_link">4</a>
+                                <a href="#" class="cat_pagination_page_link">5</a>
+                                <a href="#" class="cat_pagination_page_link">6</a>
+                                <a href="#" class="cat_pagination_page_link">3</a>
+
+                                <a href="#" class="cat_pagination_next">
+                                    <i class="fa-regular fa-chevron-right"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="news">
+            <div class="section-wrapp">
+                <div class="container">
+                    <h1 class="wrapper_title">O` ZBEKISTON YANGILIKLARI</h1>
+                    <ul class="news_list">
+                        <li class="news_item">
+                            <img src="./assets/img/wikwgzhroifu-849v5ep4fleb5is2pmedium.jpg" alt="">
+                            <p class="news_date"><i class="fa-regular fa-clock"></i> 26-07-2022</p>
+                            <h1 class="news_link">
+                                <a href="#">
+                                    Fuqarolar tashabbusi jamg‘armasidan jamoatchilik fikri asosida shakllantirilgan
+                                    (g‘olib deb topilgan) tadbirlarni
+                                    moliyalashtirish uchun yo‘naltirilgan mablag‘lar yuzasidan
+                                </a>
+                            </h1>
+                        </li>
+                        <li class="news_item">
+                            <img src="./assets/img/wikwgzhroifu-849v5ep4fleb5is2pmedium.jpg" alt="">
+                            <p class="news_date"><i class="fa-regular fa-clock"></i> 26-07-2022</p>
+                            <h1 class="news_link">
+                                <a href="#">
+                                    Fuqarolar tashabbusi jamg‘armasidan jamoatchilik fikri asosida shakllantirilgan
+                                    (g‘olib deb topilgan) tadbirlarni
+                                    moliyalashtirish uchun yo‘naltirilgan mablag‘lar yuzasidan
+                                </a>
+                            </h1>
+                        </li>
+                        <li class="news_item">
+                            <img src="./assets/img/wikwgzhroifu-849v5ep4fleb5is2pmedium.jpg" alt="">
+                            <p class="news_date"><i class="fa-regular fa-clock"></i> 26-07-2022</p>
+                            <h1 class="news_link">
+                                <a href="#">
+                                    Fuqarolar tashabbusi jamg‘armasidan jamoatchilik fikri asosida shakllantirilgan
+                                    (g‘olib deb topilgan) tadbirlarni
+                                    moliyalashtirish uchun yo‘naltirilgan mablag‘lar yuzasidan
+                                </a>
+                            </h1>
+                        </li>
+                        <li class="news_item">
+                            <img src="./assets/img/wikwgzhroifu-849v5ep4fleb5is2pmedium.jpg" alt="">
+                            <p class="news_date"><i class="fa-regular fa-clock"></i> 26-07-2022</p>
+                            <h1 class="news_link">
+                                <a href="#">
+                                    Fuqarolar tashabbusi jamg‘armasidan jamoatchilik fikri asosida shakllantirilgan
+                                    (g‘olib deb topilgan) tadbirlarni
+                                    moliyalashtirish uchun yo‘naltirilgan mablag‘lar yuzasidan
+                                </a>
+                            </h1>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </main>
 
@@ -257,12 +441,19 @@
     <p class="footer_title footer_text">
         ANDIJON VILOYATI HOKIMLIGI © 2009-2023
     </p>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="./assets/lib/js/smooth-scroll.js"></script>
-    <script src="./assets/lib/js/swiper_settings.js"></script>
-
+    <script src="./assets/lib/js/sticky.js"></script>
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/time.js"></script>
+
+    <script type="text/javascript">
+        var a = new StickySidebar('#sidebar', {
+            topSpacing: 50,
+            bottomSpacing: -20,
+            containerSelector: '.container',
+            innerWrapperSelector: '.sidebar__inner'
+        });
+    </script>
 </body>
 
 </html>
