changin and fixing

--- a/main/index.html
+++ b/main/index.html
@@ -78,44 +78,7 @@
                 <ul class="header_navigation_list">
                     <li class="header_navigation_item">
                         <span class="header_navigation_name">
-                            ТУМАН ҲОКИМЛИГИ
-                        </span>
-
-                        <div class="header_navigation_links_wrapper">
-                            <a href="#">
-                                action
-                            </a>
-                            <a href="#">
-                                action
-                            </a>
-                            <a href="#">
-                                action
-                            </a>
-                            <a href="#">
-                                action
-                            </a>
-                            <a href="#">
-                                action
-                            </a> <a href="#">
-                                action
-                            </a>
-
-                        </div>
-                    </li>
-                    <li class="header_navigation_item">
-                        <span class="header_navigation_name">
-                            ТУМАН ҲАҚИДА
-                        </span>
-
-                        <div class="header_navigation_links_wrapper">
-                            <a href="#">
-                                action
-                            </a>
-                        </div>
-                    </li>
-                    <li class="header_navigation_item">
-                        <span class="header_navigation_name">
-                            ШАҲАР ВА ТУМАНЛАР
+                            ШАҲАР ҲОКИМЛИГИ
                         </span>
 
                         <div class="header_navigation_links_wrapper">
@@ -502,37 +465,6 @@
                             </li>
 
                             <li class="main-hero_action_item">
-                                <span>Foydali havolalar</span>
-                                <ul class="main-hero_action_posts">
-                                    <li class="main-hero_action_post">
-                                        <a href="#" class="main-hero_action_title">
-                                            <img class="main-hero_action_img" src="./assets/img/vil-serv-1.png" alt="">
-                                            FOTOGALEREYA
-                                        </a>
-                                    </li>
-                                    <li class="main-hero_action_post">
-                                        <a href="#" class="main-hero_action_title">
-                                            <img class="main-hero_action_img" src="./assets/img/vil-serv-1.png" alt="">
-                                            BO`LIMLAR
-                                        </a>
-                                    </li>
-                                    <li class="main-hero_action_post">
-                                        <a href="#" class="main-hero_action_title">
-                                            <img class="main-hero_action_img" src="./assets/img/vil-serv-1.png" alt="">
-                                            INTERAKTIV XIZMATLAR
-                                        </a>
-                                    </li>
-                                    <li class="main-hero_action_post">
-                                        <a href="#" class="main-hero_action_title">
-                                            <img class="main-hero_action_img" src="./assets/img/vil-serv-1.png" alt="">
-                                            INTERAKTIV XIZMATLAR
-                                        </a>
-                                    </li>
-
-                                </ul>
-                            </li>
-
-                            <li class="main-hero_action_item">
                                 <span>FOTOGALEREYA</span>
                                 <ul class="main-hero_action_posts photo_gallery">
                                     <li class="main-hero_action_post">
@@ -543,24 +475,6 @@
                                     </li>
                                     <li class="main-hero_action_post">
                                         <img src="./assets/img/bustonlik-hokimi-300x300.jpg" alt="">
-                                    </li>
-                                </ul>
-                            </li>
-
-                            <li class="main-hero_action_item">
-                                <span>VIDEOGALEREYA</span>
-                                <ul class="main-hero_action_posts">
-                                    <li class="main-hero_action_post">
-                                        <video src="https://media.utube.uz/videos/ab603ee4bc2240297bb4961073251ec5.mp4"
-                                            controls></video>
-                                    </li>
-                                    <li class="main-hero_action_post">
-                                        <video src="https://media.utube.uz/videos/ab603ee4bc2240297bb4961073251ec5.mp4"
-                                            controls></video>
-                                    </li>
-                                    <li class="main-hero_action_post">
-                                        <video src="https://media.utube.uz/videos/ab603ee4bc2240297bb4961073251ec5.mp4"
-                                            controls></video>
                                     </li>
                                 </ul>
                             </li>
