--- a/main/wrapper.html
+++ b/main/wrapper.html
@@ -53,10 +53,13 @@
 
                     <div class="header_settings">
                         <form action="">
-                            <select name="language" id="language">
-                                <option value="uz" selected>Uz</option>
-                                <option value="ru">Ru</option>
-                            </select>
+                            <div class="header_form_selection">
+                                <img class="header_lang_img" src="https://bostonliq.toshvil.uz/images/uz.png" alt="">
+                                <select name="language" id="language">
+                                    <option value="uz" selected>Uz</option>
+                                    <option value="ru">Ru</option>
+                                </select>
+                            </div>
 
                             <div class="header_search_wrapper">
                                 <input type="text" name="search" placeholder="Qidirish">
@@ -75,44 +78,7 @@
                 <ul class="header_navigation_list">
                     <li class="header_navigation_item">
                         <span class="header_navigation_name">
-                            ТУМАН ҲОКИМЛИГИ
-                        </span>
-
-                        <div class="header_navigation_links_wrapper">
-                            <a href="#">
-                                action
-                            </a>
-                            <a href="#">
-                                action
-                            </a>
-                            <a href="#">
-                                action
-                            </a>
-                            <a href="#">
-                                action
-                            </a>
-                            <a href="#">
-                                action
-                            </a> <a href="#">
-                                action
-                            </a>
-
-                        </div>
-                    </li>
-                    <li class="header_navigation_item">
-                        <span class="header_navigation_name">
-                            ТУМАН ҲАҚИДА
-                        </span>
-
-                        <div class="header_navigation_links_wrapper">
-                            <a href="#">
-                                action
-                            </a>
-                        </div>
-                    </li>
-                    <li class="header_navigation_item">
-                        <span class="header_navigation_name">
-                            ШАҲАР ВА ТУМАНЛАР
+                            ШАҲАР ҲОКИМЛИГИ
                         </span>
 
                         <div class="header_navigation_links_wrapper">
@@ -219,6 +185,60 @@
 
     <main>
 
+        
+        <div class="news">
+            <div class="section-wrapp">
+                <div class="container">
+                    <h1 class="wrapper_title">O` ZBEKISTON YANGILIKLARI</h1>
+                    <ul class="news_list">
+                        <li class="news_item">
+                            <img src="./assets/img/wikwgzhroifu-849v5ep4fleb5is2pmedium.jpg" alt="">
+                            <p class="news_date"><i class="fa-regular fa-clock"></i> 26-07-2022</p>
+                            <h1 class="news_link">
+                                <a href="#">
+                                    Fuqarolar tashabbusi jamg‘armasidan jamoatchilik fikri asosida shakllantirilgan
+                                    (g‘olib deb topilgan) tadbirlarni
+                                    moliyalashtirish uchun yo‘naltirilgan mablag‘lar yuzasidan
+                                </a>
+                            </h1>
+                        </li>
+                        <li class="news_item">
+                            <img src="./assets/img/wikwgzhroifu-849v5ep4fleb5is2pmedium.jpg" alt="">
+                            <p class="news_date"><i class="fa-regular fa-clock"></i> 26-07-2022</p>
+                            <h1 class="news_link">
+                                <a href="#">
+                                    Fuqarolar tashabbusi jamg‘armasidan jamoatchilik fikri asosida shakllantirilgan
+                                    (g‘olib deb topilgan) tadbirlarni
+                                    moliyalashtirish uchun yo‘naltirilgan mablag‘lar yuzasidan
+                                </a>
+                            </h1>
+                        </li>
+                        <li class="news_item">
+                            <img src="./assets/img/wikwgzhroifu-849v5ep4fleb5is2pmedium.jpg" alt="">
+                            <p class="news_date"><i class="fa-regular fa-clock"></i> 26-07-2022</p>
+                            <h1 class="news_link">
+                                <a href="#">
+                                    Fuqarolar tashabbusi jamg‘armasidan jamoatchilik fikri asosida shakllantirilgan
+                                    (g‘olib deb topilgan) tadbirlarni
+                                    moliyalashtirish uchun yo‘naltirilgan mablag‘lar yuzasidan
+                                </a>
+                            </h1>
+                        </li>
+                        <li class="news_item">
+                            <img src="./assets/img/wikwgzhroifu-849v5ep4fleb5is2pmedium.jpg" alt="">
+                            <p class="news_date"><i class="fa-regular fa-clock"></i> 26-07-2022</p>
+                            <h1 class="news_link">
+                                <a href="#">
+                                    Fuqarolar tashabbusi jamg‘armasidan jamoatchilik fikri asosida shakllantirilgan
+                                    (g‘olib deb topilgan) tadbirlarni
+                                    moliyalashtirish uchun yo‘naltirilgan mablag‘lar yuzasidan
+                                </a>
+                            </h1>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
