--- a/main/contact.html
+++ b/main/contact.html
@@ -273,6 +273,10 @@
                             <option value="">Ma'lumot olish</option>
                         </select>
 
+                        <textarea class="contact-" name="message">
+
+                        </textarea>
+
                         <button type="submit">
                             Yuborish
                         </button>
@@ -370,7 +374,6 @@
         TOSHKENT VILOYATI HOKIMLIGI © 2009-2023
     </p>
     <script src="./assets/lib/js/smooth-scroll.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./assets/js/time.js"></script>
     <script src="./assets/js/main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -381,10 +384,6 @@
             $("#contact_num").inputmask("(99)999-99-99");
             $("#birthdate").inputmask("99.99.9999");
         });
-    </script>
-
-    <script>
-        AOS.init();
     </script>
 </body>
 
